--- a/VideoPlayerFX/src/main/resources/Assets/GUIassets/KatflixStyles.css
+++ b/VideoPlayerFX/src/main/resources/Assets/GUIassets/KatflixStyles.css
@@ -56,7 +56,9 @@
 }
 
 .mediaPane:hover {
-    -fx-opacity : 0.85;
+    -fx-opacity : 0.95;
+    -fx-scale-y : 1.05;
+    -fx-scale-x : 1.05;
 }
 
 .menuButton:hover,
@@ -81,3 +83,9 @@
 .videoSlider .thumb {
     -fx-background-color :  linear-gradient(from 0.0% 0.0% to 85.782% 45.4976%, #e42a04 0.0%, #e48901 100.0%);
 }
+
+.mediaImage:hover {
+    -fx-effect : innershadow(three-pass-box, #ff0066, 21.0, 0.1, 0, 0);
+    -fx-opacity : 1;
+}
+
