--- a/VideoPlayerFX/src/main/resources/com/GrPro/streamService/Controllers/Media.fxml
+++ b/VideoPlayerFX/src/main/resources/com/GrPro/streamService/Controllers/Media.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
@@ -13,16 +14,8 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<AnchorPane fx:id="mediaPaneAnchor"  prefHeight="209.0" prefWidth="360.0" style="-fx-background-color: #141414; -fx-background-radius: 5 5 5 5;" styleClass="mediaPane" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.GrPro.streamService.Controllers.MediaPaneController">
+<AnchorPane fx:id="mediaPaneAnchor" prefHeight="209.0" prefWidth="360.0" style="-fx-background-color: #141414; -fx-background-radius: 5 5 5 5;" styleClass="mediaPane" stylesheets="@../../../../Assets/GUIassets/KatflixStyles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.GrPro.streamService.Controllers.MediaPaneController">
     <children>
-        <ImageView onMousePressed="#playMedia" fx:id="mediaImage" fitHeight="209.0" fitWidth="140.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../Assets/CustomMediaImages/placeholder.jpg" />
-         </image>
-         <viewport>
-            <Rectangle2D />
-         </viewport>
-      </ImageView>
         <Label fx:id="mediaTitle" alignment="TOP_CENTER" contentDisplay="CENTER" focusTraversable="false" layoutX="150.0" layoutY="9.0" prefHeight="65.0" prefWidth="200.0" text="Media Title" textAlignment="CENTER" textFill="#bfbfbf" wrapText="true">
          <font>
             <Font name="DejaVu Sans Bold" size="18.0" />
@@ -49,7 +42,11 @@
             <Font size="14.0" />
          </font>
       </Text>
-      <Pane fx:id="starPane" layoutX="304.0" layoutY="140.0" onMouseClicked="#favoriteButton">
+      <Pane layoutX="140.0" onMouseClicked="#openAboutPage" prefHeight="209.0" prefWidth="220.0" style="-fx-background-color: TRANSPARENT;" styleClass="aboutPagePane">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Pane>
+      <Pane fx:id="starPane" layoutX="314.0" layoutY="160.0" onMouseClicked="#favoriteButton">
          <children>
             <ImageView fx:id="starHollow" fitHeight="42.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -68,7 +65,21 @@
                </viewport>
             </ImageView>
          </children>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Pane>
+        <ImageView fx:id="mediaImage" fitHeight="209.0" fitWidth="140.0" onMousePressed="#playMedia" pickOnBounds="true" preserveRatio="true" styleClass="mediaImage">
+         <image>
+            <Image url="@../../../../Assets/CustomMediaImages/placeholder.jpg" />
+         </image>
+         <viewport>
+            <Rectangle2D height="209.0" width="140.0" />
+         </viewport>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
     </children>
    <effect>
       <DropShadow height="13.67" radius="6.7" spread="0.4" width="15.13">
