--- a/VideoPlayerFX/src/main/resources/com/GrPro/streamService/Controllers/MediaScreen.fxml
+++ b/VideoPlayerFX/src/main/resources/com/GrPro/streamService/Controllers/MediaScreen.fxml
@@ -1,28 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.Double?>
-<?import javafx.geometry.Insets?>
-<?import javafx.geometry.Rectangle2D?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.ColorAdjust?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.effect.InnerShadow?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.shape.Circle?>
-<?import javafx.scene.shape.Polygon?>
-<?import javafx.scene.text.Font?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
 <AnchorPane fx:id="mediaScreenAnchor" minHeight="900.0" minWidth="1600.0" prefHeight="900.0" prefWidth="1600.0" style="-fx-background-color: BLACK;" stylesheets="@../../../../Assets/GUIassets/KatflixStyles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.GrPro.streamService.Controllers.MediaScreenController">
    <children>
@@ -157,7 +144,7 @@
                <content>
                   <VBox prefWidth="170.0" style="-fx-background-color: #3f3f3f;">
                      <children>
-                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Action" textAlignment="CENTER" textFill="#a256ff" wrapText="true" VBox.vgrow="NEVER">
+                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#onGenreClick" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Action" textAlignment="CENTER" textFill="#a256ff" wrapText="true" VBox.vgrow="NEVER">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -168,7 +155,7 @@
                               <Insets left="10.0" right="25.0" />
                            </padding>
                         </CheckBox>
-                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Drama" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
+                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#onGenreClick" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Drama" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -176,7 +163,7 @@
                               <Insets left="10.0" right="25.0" />
                            </padding>
                         </CheckBox>
-                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Thriller" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
+                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#onGenreClick" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Thriller" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -184,7 +171,7 @@
                               <Insets left="10.0" right="25.0" />
                            </padding>
                         </CheckBox>
-                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Horror" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
+                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#onGenreClick" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Horror" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -192,7 +179,7 @@
                               <Insets left="10.0" right="25.0" />
                            </padding>
                         </CheckBox>
-                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Mystery" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
+                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#onGenreClick" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Mystery" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -200,7 +187,7 @@
                               <Insets left="10.0" right="25.0" />
                            </padding>
                         </CheckBox>
-                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Romance" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
+                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#onGenreClick" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Romance" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -208,7 +195,7 @@
                               <Insets left="10.0" right="25.0" />
                            </padding>
                         </CheckBox>
-                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="History" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
+                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#onGenreClick" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="History" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -216,7 +203,7 @@
                               <Insets left="10.0" right="25.0" />
                            </padding>
                         </CheckBox>
-                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Comedy" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
+                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#onGenreClick" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Comedy" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -224,7 +211,7 @@
                               <Insets left="10.0" right="25.0" />
                            </padding>
                         </CheckBox>
-                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Krimi" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
+                        <CheckBox alignment="CENTER_RIGHT" focusTraversable="false" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#onGenreClick" prefHeight="40.0" prefWidth="170.0" style="-fx-background-color: #1c1c1c;" text="Krimi" textAlignment="CENTER" textFill="#a256ff" wrapText="true">
                            <font>
                               <Font size="18.0" />
                            </font>
